# AdShield-Pro

./: .gitignore  ABOUT.md  ADSGUARD.cpp  ARCHITECTURE.md  AdShieldProUltra.cpp  BUILD_GUIDE.md  CMakeLists.txt  DELIVERABLES.md  GITHUB_SETTINGS.md  GITHUB_SETUP.md  GITHUB_UPLOAD_READY.md  INDEX.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  STRUCTURE.md  adshield.conf
docs/: ARCHITECTURE.md  BUILD.md  FEATURES.md
include/blocklists/: blocklist_manager.hpp
include/core/: cache.hpp  config.hpp  content_filter.hpp  controller.hpp  crypto.hpp  dns_resolver.hpp  logger.hpp
include/platform/: linux_platform.hpp  macos_platform.hpp  platform.hpp  windows_platform.hpp
scripts/: analyze_codebase.py  build.bat  build.sh  build_all_platforms.ps1  build_all_platforms.sh  performance_benchmark.py
src/blocklists/: blocklist_manager.cpp
src/core/: config.cpp  content_filter.cpp  controller.cpp  crypto.cpp  dns_resolver.cpp  logger.cpp
src/main/: main.cpp
src/platform/: linux_platform.cpp  macos_platform.cpp  platform.cpp  windows_platform.cpp
tests/: CMakeLists.txt
tests/unit/: test_cache.cpp  test_config.cpp  test_content_filter.cpp  test_crypto.cpp  test_dns_resolver.cpp  test_logger.cpp
